Dependencies - migration to Apache DBCP v2 (#82)
* Migrate to DBCP v2

* Fixed control-panel compilation error

* updated data source bean factory in collect-assembly

* solved compilation problem

Co-authored-by: Stefano Ricci <SteRiccio@users.noreply.github.com>